networking/controlled-outbound-access/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kw-controlled-egress
  labels:
    pod-security.kubernetes.io/enforce: restricted
