networking/controlled-outbound-access/egress-checks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-check-to-client
  namespace: kw-controlled-egress
spec:
  podSelector:
    matchLabels:
      kamiwaza.io/extension: outbound-client
      kamiwaza.io/component: client
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: egress-check
      ports:
        - protocol: TCP
          port: 8080
